@@ -136,8 +136,8 @@
     (append! ,append!)
     (pass3/find-free ,pass3/find-free)
     (pass3/find-sets ,pass3/find-sets)
-    (%set-union ,%set-union)
-    (%set-intersect ,%set-intersect)
+;;     (%set-union ,%set-union)
+;;     (%set-intersect ,%set-intersect)
     (make-code-builder ,make-code-builder)
     (code-builder-put1! ,code-builder-put1!)
     (code-builder-put2! ,code-builder-put2!)
